--- a/code/index.html
+++ b/code/index.html
@@ -20,7 +20,7 @@
     <ul>
       <li><a href="../">home</a></li>
       <li><a href="../fonts">fonts</a></li>
-      <li><a href="..texts">texts</a></li>
+      <li><a href="../texts">texts</a></li>
       <li>code</li>
       <li><a href="../about">about</a></li>
     </ul>
