--- a/fonts/valentina.html
+++ b/fonts/valentina.html
@@ -19,7 +19,7 @@
   <section class="menu">
     <ul>
       <li><a href="../">home</a></li>
-      <li><a href="/fonts">fonts</a></li>
+      <li><a href="../fonts">fonts</a></li>
       <li><a href="../texts">texts</a></li>
       <li><a href="../code">code</a></li>
       <li><a href="../about">about</a></li>
