--- a/about/index.html
+++ b/about/index.html
@@ -149,6 +149,7 @@
   <section class="data" id="awards">
     <h2>Awards</h2>
     <ul>
+      <li><strong>Creative Circle Gold 2019</strong>, Creative Circle for <em>Lost & Foundry</em>.</li>
       <li><strong>Most appreciated projects 2012</strong>, <em>Behance</em> (Adobe) for <em>Valentina</em>.</li>
       <li><strong>Best student project 2012</strong>, Confederación de Escuelas de Artes Plásticas y Diseño, second prize for <em>Valentina</em>.</li>
     </ul>
