--- a/about/index.html
+++ b/about/index.html
@@ -98,6 +98,7 @@
   <section class="data" id="exhibitions">
     <h2>Exhibitions</h2>
     <ul>
+      <li><strong>New Bulgarian Typography 2</strong> (collective). Cyrillic type design, Moscow (Russia) and Sofia (Bulgaria), 2019.</li>
       <li><strong>Tipografía en la cultura contemporánea</strong> (collective). Type design, Monterrey, Mexico, 2018.</li>
       <li><strong>Una tipografía para Buñuel</strong> (collective). Type design, Madrid, Spain, 2018.</li>
       <li><strong>Revival salsero</strong> (collective). Type design, Bogotá, Colombia, 2018.</li>
@@ -149,9 +150,12 @@
   <section class="data" id="awards">
     <h2>Awards</h2>
     <ul>
-      <li><strong>Creative Circle Gold 2019</strong>, Creative Circle for <em>Lost & Foundry</em>.</li>
-      <li><strong>Most appreciated projects 2012</strong>, <em>Behance</em> (Adobe) for <em>Valentina</em>.</li>
-      <li><strong>Best student project 2012</strong>, Confederación de Escuelas de Artes Plásticas y Diseño, second prize for <em>Valentina</em>.</li>
+      <li><strong>Silver 2019</strong>, European Design Awards for <em>FS Neruda</em>.</li>
+      <li><strong>Wooden Pencil 2019</strong>, D&AD for <em>Storytelling Serifs Specimen</em>.</li>
+      <li><strong>Gold 2019</strong>, Creative Circle for <em>Lost & Foundry</em>.</li>
+      <li><strong>Mention @ Gerard Unger Scholarship 2017</strong>, TypeTogether for <em>Rock & Roll</em>.</li>
+      <li><strong>Most appreciated projects 2012 @ Behance</strong>, (Adobe) for <em>Valentina</em>.</li>
+      <li><strong>2nd @ Best student project 2012</strong>, Confederación de Escuelas de Artes Plásticas y Diseño for <em>Valentina</em>.</li>
     </ul>
   </section>
   <section class="data" id="the-end">
