--- a/about/index.html
+++ b/about/index.html
@@ -80,6 +80,7 @@
   <section class="data" id="talks">
     <h2>Talks</h2>
     <ul>
+      <li><strong>Lost & Foundry.</strong> The Galley Club, London, United Kingdom, 2019.</li>
       <li><strong>Lost & Foundry.</strong> TypeThursdayLON, London, United Kingdom, 2018.</li>
       <li><strong>Lost & Foundry.</strong> The House of St Barnabas, London, United Kingdom, 2018.</li>
       <li><strong>Tipografilias y tipopatías.</strong> Creatus Dominus, Sant Cugat del Vallès, Spain, 2015.</li>
