--- a/about/index.html
+++ b/about/index.html
@@ -112,6 +112,17 @@
       <li><strong>Ampersand</strong> (collective). Type design, Brighton, UK, 2013.</li>
     </ul>
   </section>
+  <section class="data" id="awards">
+    <h2>Awards</h2>
+    <ul>
+      <li><strong>Silver 2019</strong>, European Design Awards for <em>FS Neruda</em>.</li>
+      <li><strong>Wooden Pencil 2019</strong>, D&AD for <em>Storytelling Serifs Specimen</em>.</li>
+      <li><strong>Gold 2019</strong>, Creative Circle for <em>Lost & Foundry</em>.</li>
+      <li><strong>Mention @ Gerard Unger Scholarship 2017</strong>, TypeTogether for <em>Rock & Roll</em>.</li>
+      <li><strong>Most appreciated projects 2012 @ Behance</strong>, Adobe for <em>Valentina</em>.</li>
+      <li><strong>2nd @ Best project 2012</strong>, CEA for <em>Valentina</em>.</li>
+    </ul>
+  </section>
   <section class="data" id="features">
     <h2>Selected features &amp; interviews</h2>
     <ul>
@@ -146,17 +157,6 @@
       <li><em>UI From Mars</em></li>
       <li><em>Arrea Magazine</em></li>
       <li><em>Lettering time</em></li>
-    </ul>
-  </section>
-  <section class="data" id="awards">
-    <h2>Awards</h2>
-    <ul>
-      <li><strong>Silver 2019</strong>, European Design Awards for <em>FS Neruda</em>.</li>
-      <li><strong>Wooden Pencil 2019</strong>, D&AD for <em>Storytelling Serifs Specimen</em>.</li>
-      <li><strong>Gold 2019</strong>, Creative Circle for <em>Lost & Foundry</em>.</li>
-      <li><strong>Mention @ Gerard Unger Scholarship 2017</strong>, TypeTogether for <em>Rock & Roll</em>.</li>
-      <li><strong>Most appreciated projects 2012 @ Behance</strong>, (Adobe) for <em>Valentina</em>.</li>
-      <li><strong>2nd @ Best student project 2012</strong>, Confederación de Escuelas de Artes Plásticas y Diseño for <em>Valentina</em>.</li>
     </ul>
   </section>
   <section class="data" id="the-end">
