--- a/about/index.html
+++ b/about/index.html
@@ -116,6 +116,7 @@
     <h2>Awards</h2>
     <ul>
       <li><strong>Silver 2019</strong>, European Design Awards for <em>FS Neruda</em>.</li>
+      <li><strong>One of the Winners 2019</strong>, Modern Cyrillic for <em>FS Brabo Pro</em>.</li>
       <li><strong>Wooden Pencil 2019</strong>, D&AD for <em>Storytelling Serifs Specimen</em>.</li>
       <li><strong>Gold 2019</strong>, Creative Circle for <em>Lost & Foundry</em>.</li>
       <li><strong>Mention @ Gerard Unger Scholarship 2017</strong>, TypeTogether for <em>Rock & Roll</em>.</li>
