--- a/about/index.html
+++ b/about/index.html
@@ -129,35 +129,27 @@
     <ul>
       <li><em>Manual de tipografía digital</em>, Daniel Rodríguez-Valero (Campgràfic, 2016)</li>
       <li><em>AIGA, Eye on Design</em></li>
+      <li><em>UnderConsideration</em></li>
+      <li><em>Creative Review</em></li>
       <li><em>PAGE</em></li>
+      <li><em>The Drum</em></li>
       <li><em>Transform Magazine</em></li>
       <li><em>Smashing Magazine</em></li>
       <li><em>Abduzeedo</em></li>
-      <li><em>CreativeBloq</em></li>
       <li><em>Creative Boom</em></li>
       <li><em>TypeThursday</em></li>
       <li><em>Typography Served</em></li>
       <li><em>TypographHer</em></li>
       <li><em>MyFonts Rising Stars</em></li>
-      <li><em>The Drum</em></li>
+      <li><em>Domestika</em></li>
+      <li><em>Gràffica</em></li>
+      <li><em>Unos tipos duros</em></li>
+      <li><em>Rayitas Azules</em></li>
+      <li><em>Monográfica</em></li>
+      <li><em>Neo2</em></li>
       <li><em>Televisión Española</em></li>
       <li><em>Aragón Televisión</em></li>
       <li><em>eldiario.es</em></li>
-      <li><em>Heraldo de Aragón</em></li>
-      <li><em>Aragón Radio</em></li>
-      <li><em>Domestika</em></li>
-      <li><em>Rayitas Azules</em></li>
-      <li><em>Quinta Tinta</em></li>
-      <li><em>Monográfica</em></li>
-      <li><em>Gràffica</em></li>
-      <li><em>Unos tipos duros</em></li>
-      <li><em>Honos</em></li>
-      <li><em>Criterion</em></li>
-      <li><em>Neo2</em></li>
-      <li><em>En caja baja</em></li>
-      <li><em>UI From Mars</em></li>
-      <li><em>Arrea Magazine</em></li>
-      <li><em>Lettering time</em></li>
     </ul>
   </section>
   <section class="data" id="the-end">
