--- a/about/index.html
+++ b/about/index.html
@@ -18,15 +18,13 @@
 <body>
   <section class="menu">
     <ul>
-      <li><a href="../">home</a></li>
+      <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="../fonts">fonts</a></li>
-      <li><a href="../texts">texts</a></li>
-      <li><a href="../code">code</a></li>
-      <li>about</li>
+      <li><a href="../texts">writing</a></li>
+      <li><a href="../reading">reading</a></li>
+      <li><a href="../code">coding</a></li>
+      <li><a href="./">about</a></li>
     </ul>
-  </section>
-  <section class="presentation" style="padding-bottom:0">
-    <h1><strong>About</strong></h1>
   </section>
   <section class="data" id="contact">
     <h2>Contact</h2>
@@ -153,7 +151,7 @@
     </ul>
   </section>
   <section class="data" id="the-end">
-    <p>&#13025; 2010—<script>document.write(new Date().getFullYear())</script>, Pedro Arilla.</p>
+    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla. &rarr; <a href="mailto:info@pedroarilla.com">Email me</a> or follow me on <a href="https://twitter.com/pedroarilla" target="_blank">TW</a> & <a href="https://instagram.com/pedroarilla" target="_blank">IG</a>.</p>
   </section>
 </body>
 </html>
