--- a/code/index.html
+++ b/code/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Code — Pedro Arilla</title>
+	<title>Coding — Pedro Arilla</title>
 	<meta name="description" content="Coding projects by Pedro Arilla, type designer & typographer from Spain based in London (UK).">
-  <meta property="og:title" content="Code — Pedro Arilla"/>
+  <meta property="og:title" content="Coding — Pedro Arilla"/>
 	<meta property="og:description" content="Coding projects by Pedro Arilla, type designer & typographer from Spain based in London (UK)."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="http://pedroarilla.com/code"/>
@@ -18,21 +18,22 @@
 <body>
   <section class="menu">
     <ul>
-      <li><a href="../">home</a></li>
+      <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="../fonts">fonts</a></li>
-      <li><a href="../texts">texts</a></li>
-      <li>code</li>
+      <li><a href="../texts">writing</a></li>
+      <li><a href="../reading">reading</a></li>
+      <li><a href="./">coding</a></li>
       <li><a href="../about">about</a></li>
     </ul>
   </section>
   <section class="presentation" style="padding-bottom:0">
-      <h1><strong>Code</strong></h1>
+      <h1><strong>Coding</strong></h1>
       <p>A Pomodoro timer written in Python<br>&emsp;&rarr; <a href="https://github.com/pedroarilla/pomothon" target="_blank">GitHub repository</a></p>
       <p>Workflow to set up and update scripts repositories for Glyphs app<br>&emsp;&rarr; <a href="https://github.com/pedroarilla/update-glyphs-scripts" target="_blank">GitHub repository</a></p>
       <p>Python scripts for the Glyphs font editor<br>&emsp;&rarr; <a href="https://github.com/pedroarilla/glyphs-scripts" target="_blank">GitHub repository</a></p>
   </section>
   <section class="data" id="the-end">
-    <p>&#13025; 2010—<script>document.write(new Date().getFullYear())</script>, Pedro Arilla.</p>
+    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla. &rarr; <a href="mailto:info@pedroarilla.com">Email me</a> or follow me on <a href="https://twitter.com/pedroarilla" target="_blank">TW</a> & <a href="https://instagram.com/pedroarilla" target="_blank">IG</a>.</p>
   </section>
 </body>
 </html>
