--- a/fonts/mestre.html
+++ b/fonts/mestre.html
@@ -18,10 +18,11 @@
 <body>
   <section class="menu">
     <ul>
-      <li><a href="../">home</a></li>
-      <li><a href="../fonts">fonts</a></li>
-      <li><a href="../texts">texts</a></li>
-      <li><a href="../code">code</a></li>
+      <li><strong><a href="../">pedroarilla</a></strong></li>
+      <li><a href="./">fonts</a></li>
+      <li><a href="../texts">writing</a></li>
+      <li><a href="../reading">reading</a></li>
+      <li><a href="../code">coding</a></li>
       <li><a href="../about">about</a></li>
     </ul>
   </section>
@@ -40,7 +41,7 @@
   </ul>
   </section>
   <section class="data" id="shopping">
-    <p><a class="payhip-button payhip-button-blue payhip-button-large " data-key="X15B" href="https://payhip.com/b/X15B"><strong>Buy</strong> Mestre <strong>full family</strong></a><script type="text/javascript" src="https://payhip.com/btn.js"></script></p>
+    <p><a class="payhip-button payhip-button-blue payhip-button-large" data-key="X15B" href="https://payhip.com/b/X15B"><strong>Buy</strong> Mestre <strong>full family</strong></a><script type="text/javascript" src="https://payhip.com/btn.js"></script></p>
     <p style="padding-top:20px"><strong>Pay what you want — minimum €10.</strong></p>
   </section>
   <section id="images">
@@ -55,7 +56,7 @@
     <img src="rsc/pedroarilla-mestre-9.jpg">
   </section>
     <section class="data" id="images">
-    <h2>Selected Mestre in use</h2>
+    <h2 style="margin-top:30px;">Selected Mestre in use</h2>
 <p style="margin-bottom:30px;"><em>Gràffica</em>, no. 2 (Valencia: PalauGea, 2016).</p>
     <img src="rsc/fontinuse-mestre-1.jpg">
     <img src="rsc/fontinuse-mestre-2.jpg">
@@ -72,7 +73,7 @@
     <p style="padding-top:20px"><strong>Pay what you want — minimum €10.</strong></p>
   </section>
   <section class="data" id="the-end">
-    <p>&#13025; 2010—<script>document.write(new Date().getFullYear())</script>, Pedro Arilla.</p>
+    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla. &rarr; <a href="mailto:info@pedroarilla.com">Email me</a> or follow me on <a href="https://twitter.com/pedroarilla" target="_blank">TW</a> & <a href="https://instagram.com/pedroarilla" target="_blank">IG</a>.</p>
   </section>
 </body>
 </html>
