--- a/fonts/rocknroll.html
+++ b/fonts/rocknroll.html
@@ -18,10 +18,11 @@
 <body>
   <section class="menu">
     <ul>
-      <li><a href="../">home</a></li>
-      <li><a href="../fonts">fonts</a></li>
-      <li><a href="../texts">texts</a></li>
-      <li><a href="../code">code</a></li>
+      <li><strong><a href="../">pedroarilla</a></strong></li>
+      <li><a href="./">fonts</a></li>
+      <li><a href="../texts">writing</a></li>
+      <li><a href="../reading">reading</a></li>
+      <li><a href="../code">coding</a></li>
       <li><a href="../about">about</a></li>
     </ul>
   </section>
@@ -40,7 +41,7 @@
       <li><strong>Price:</strong> Not for sale (yet)</li>
   </ul>
   </section>
-  <section id="images">
+  <section style="padding-top:30px;" id="images">
     <img src="rsc/pedroarilla-rocknroll-01.jpg">
     <img src="rsc/pedroarilla-rocknroll-02.png">
     <img src="rsc/pedroarilla-rocknroll-03.jpg">
@@ -51,7 +52,7 @@
     <img src="rsc/pedroarilla-rocknroll-08.png">
   </section>
   <section class="data" id="the-end">
-    <p>&#13025; 2010—<script>document.write(new Date().getFullYear())</script>, Pedro Arilla.</p>
+    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla. &rarr; <a href="mailto:info@pedroarilla.com">Email me</a> or follow me on <a href="https://twitter.com/pedroarilla" target="_blank">TW</a> & <a href="https://instagram.com/pedroarilla" target="_blank">IG</a>.</p>
   </section>
 </body>
 </html>
