--- a/fonts/valentina.html
+++ b/fonts/valentina.html
@@ -18,10 +18,11 @@
 <body>
   <section class="menu">
     <ul>
-      <li><a href="../">home</a></li>
-      <li><a href="../fonts">fonts</a></li>
-      <li><a href="../texts">texts</a></li>
-      <li><a href="../code">code</a></li>
+      <li><strong><a href="../">pedroarilla</a></strong></li>
+      <li><a href="./">fonts</a></li>
+      <li><a href="../texts">writing</a></li>
+      <li><a href="../reading">reading</a></li>
+      <li><a href="../code">coding</a></li>
       <li><a href="../about">about</a></li>
     </ul>
   </section>
@@ -29,7 +30,7 @@
     <h1><strong>Valentina</strong></h1>
     <p>A classic didone designed following the rules set by Bodoni in the 18th Century, combined with many features from the antique Spanish punches of that period. The font is named after type designer Pedro Arilla’s grandmother as a tribute.</p>
   </section>
-  <section class="data" id="mestre">
+  <section class="data" id="valentina">
     <h2>Features</h2>
     <ul>
       <li><strong>1 style:</strong> 450+ glyphs and 3 stylistic sets</li>
@@ -49,7 +50,7 @@
     <img src="rsc/pedroarilla-valentina-03.png">
   </section>
     <section class="data" id="images">
-    <h2>Selected Valentina in use</h2>
+    <h2 style="margin-top:30px;">Selected Valentina in use</h2>
 <p style="margin-bottom:30px;">Francisco de Quevedo, <em>Gracias y desgracias del ojo del culo</em> (Logroño: Pepitas de calabaza, 2016).</p>
     <img src="rsc/fontinuse-valentina-1.jpg">
     <img src="rsc/fontinuse-valentina-2.jpg">
@@ -57,8 +58,12 @@
     <img src="rsc/fontinuse-valentina-4.jpg">
     <img src="rsc/fontinuse-valentina-5.jpg">
   </section>
+  <section class="data" id="shopping">
+    <p><a class="payhip-button payhip-button-blue payhip-button-large " data-key="n1sU" href="https://payhip.com/b/n1sU"><strong>Buy</strong> Valentina <strong>font</strong></a><script type="text/javascript" src="https://payhip.com/btn.js"></script></p>
+    <p style="padding-top:20px"><strong>Pay what you want — minimum €1.</strong></p>
+  </section>
   <section class="data" id="the-end">
-    <p>&#13025; 2010—<script>document.write(new Date().getFullYear())</script>, Pedro Arilla.</p>
+    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla. &rarr; <a href="mailto:info@pedroarilla.com">Email me</a> or follow me on <a href="https://twitter.com/pedroarilla" target="_blank">TW</a> & <a href="https://instagram.com/pedroarilla" target="_blank">IG</a>.</p>
   </section>
 </body>
 </html>
