--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
 <body>
   <section class="menu">
     <ul>
-      <li>home</li>
+      <li><strong><a href="./">pedroarilla</a></strong></li>
       <li><a href="./fonts">fonts</a></li>
-      <li><a href="./texts">texts</a></li>
-      <li><a href="./code">code</a></li>
+      <li><a href="./texts">writing</a></li>
+      <li><a href="./reading">reading</a></li>
+      <li><a href="./code">coding</a></li>
       <li><a href="./about">about</a></li>
     </ul>
   </section>
   <section class="presentation">
-    <h1><strong>Hey! I am Pedro Arilla,</strong></br>a type designer &amp; typographer from Spain working at <a href="https://fontsmith.com" target="_blank">Fontsmith</a> and living in London (UK).</h1>
-    <p>I design <a href="./fonts">typefaces</a>, write <a href="./texts">texts</a>, teach workshops, give lectures — and <a href="./code">code</a> for fun. I passed with Distinction the MA Typeface Design at University of Reading, host one of the most well-known publications on typography in the Spanish language (<a href="https://donserifa.com" target="_blank">Don Serifa</a>), organise and teach an international one-week type design workshop (<a href="http://gliglifo.com" target="_blank">Glíglifo</a>), and own a small letterpress studio.<p>
+    <h1><strong>¡Hola! I’m Pedro Arilla</strong>, a type designer & typographer from Spain working at <a href="https://fontsmith.com" target="_blank">Fontsmith</a> and living in London (UK).</h1>
+    <p>I design <a href="./fonts">typefaces</a>, write <a href="./texts">texts</a>, teach workshops and give lectures around the world — and <a href="./code">code</a> for fun. I passed with Distinction the MA Typeface Design at University of Reading, host one of the main publications on typography in the Spanish language (<a href="https://donserifa.com" target="_blank">Don Serifa</a>), organise and teach a one-week type design workshop (<a href="http://gliglifo.com" target="_blank">Glíglifo</a>), and <a href="./reading">read</a> in the meantime.<p>
     <p>My non-type-related-background includes experience as an editorial and branding Art Director, a dark past as a programmer, a darker past (in the good way) as an editor of a metal music webzine, a few high-school fanzines, travels around the world with a wedding in Las Vegas included, a dog called Bunbury, an unfinished novel, dozens of poems, and hundreds of books on my shelves.</p>
   </section>
   <section class="data" id="the-end">
-    <p>&#13025; 2010—<script>document.write(new Date().getFullYear())</script>, Pedro Arilla.</p>
+    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla. &rarr; <a href="mailto:info@pedroarilla.com">Email me</a> or follow me on <a href="https://twitter.com/pedroarilla" target="_blank">TW</a> & <a href="https://instagram.com/pedroarilla" target="_blank">IG</a>.</p>
   </section>
 </body>
 </html>
