New purchase button

--- a/fonts/mestre.html
+++ b/fonts/mestre.html
@@ -14,6 +14,7 @@
   <link type="text/css" rel="stylesheet" href="../style.css">
   <link type="text/plain" rel="author" href="../humans.txt" />
   <link rel="shortcut icon" type="image/png" href="http://pedroarilla.com/pedroarilla.png"/>
+  <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
 </head>
 <body>
   <section class="menu">
@@ -41,7 +42,7 @@
   </ul>
   </section>
   <section class="data" id="shopping">
-    <p><a class="payhip-button payhip-button-blue payhip-button-large" data-key="X15B" href="https://payhip.com/b/X15B"><strong>Buy</strong> Mestre <strong>full family</strong></a><script type="text/javascript" src="https://payhip.com/btn.js"></script></p>
+    <p><a href="https://payhip.com/b/X15B" class="payhip-buy-button" data-theme="green" data-product="X15B">Buy Mestre font</a></p>
     <p style="padding-top:20px"><strong>Pay what you want — minimum €10.</strong></p>
   </section>
   <section id="images">
@@ -69,7 +70,7 @@
     <img src="rsc/fontinuse-mestre-9.jpg">
   </section>
   <section class="data" id="shopping">
-    <p><a class="payhip-button payhip-button-blue payhip-button-large " data-key="X15B" href="https://payhip.com/b/X15B"><strong>Buy</strong> Mestre <strong>full family</strong></a><script type="text/javascript" src="https://payhip.com/btn.js"></script></p>
+    <p><a href="https://payhip.com/b/X15B" class="payhip-buy-button" data-theme="green" data-product="X15B">Buy Mestre font</a></p>
     <p style="padding-top:20px"><strong>Pay what you want — minimum €10.</strong></p>
   </section>
   <section class="data" id="the-end">
