--- a/fonts/valentina.html
+++ b/fonts/valentina.html
@@ -14,6 +14,7 @@
   <link type="text/css" rel="stylesheet" href="../style.css">
   <link type="text/plain" rel="author" href="../humans.txt" />
   <link rel="shortcut icon" type="image/png" href="http://pedroarilla.com/pedroarilla.png"/>
+  <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
 </head>
 <body>
   <section class="menu">
@@ -41,7 +42,7 @@
   </ul>
   </section>
   <section class="data" id="shopping">
-    <p><a class="payhip-button payhip-button-blue payhip-button-large " data-key="n1sU" href="https://payhip.com/b/n1sU"><strong>Buy</strong> Valentina <strong>font</strong></a><script type="text/javascript" src="https://payhip.com/btn.js"></script></p>
+    <p><a href="https://payhip.com/b/n1sU" class="payhip-buy-button" data-theme="green" data-product="n1sU">Buy Valentina font</a></p>
     <p style="padding-top:20px"><strong>Pay what you want — minimum €1.</strong></p>
   </section>
   <section id="images">
@@ -59,7 +60,7 @@
     <img src="rsc/fontinuse-valentina-5.jpg">
   </section>
   <section class="data" id="shopping">
-    <p><a class="payhip-button payhip-button-blue payhip-button-large " data-key="n1sU" href="https://payhip.com/b/n1sU"><strong>Buy</strong> Valentina <strong>font</strong></a><script type="text/javascript" src="https://payhip.com/btn.js"></script></p>
+    <p><a href="https://payhip.com/b/n1sU" class="payhip-buy-button" data-theme="green" data-product="n1sU">Buy Valentina font</a></p>
     <p style="padding-top:20px"><strong>Pay what you want — minimum €1.</strong></p>
   </section>
   <section class="data" id="the-end">
