--- a/about/index.html
+++ b/about/index.html
@@ -26,6 +26,10 @@
       <li><a href="./">about</a></li>
     </ul>
   </section>
+  <section class="presentation" style="padding-bottom:0">
+    <h1><strong>About</strong></h1>
+    <p>I was born in 1984 in Ejea de los Caballeros (Spain). I am currently living in <del>Ejea</del>, <del>Zaragoza</del>, <del>Reading</del>, London with Cris (wifey) and Bunbury (🐶). I love reading and writing — but also 🤘, 🏀 and 🍿.</p>
+  </section>
   <section class="data" id="contact">
     <h2>Contact</h2>
     <ul>
