--- a/fonts/index.html
+++ b/fonts/index.html
@@ -28,6 +28,7 @@
   </section>
   <section class="presentation" style="padding-bottom:0">
     <h1><strong>Fonts</strong></h1>
+    <p>I’ve been designing letters, words and thereafter fonts since 2010. These are the ones published or made public.</p>
   </section>
   <article class="data" id="fs-neruda">
     <a href="https://www.fontsmith.com/fonts/fs-neruda" title="Go to FS Neruda font" target="_blank" class="link-img"><img src="rsc/fs-neruda-font.gif" title="FS Neruda font" width="572px"></a>
