--- a/reading/index.html
+++ b/reading/index.html
@@ -28,42 +28,42 @@
   </section>
   <section class="presentation" style="padding-bottom:0">
     <h1><strong>Reading</strong></h1>
-    <p>A list of the books I’ve read (or re-read). If I don’t enjoy a book, I quit — so I’d kind of recommend each book on this list.</p>
+    <p>A list of the books I’ve read (or re-read). If I don’t enjoy a book, I quit — so I kind of recommend each book on this list.</p>
     <p>
-    👌 means I very recommend it.<br>
-    🤘 means FUCKING WOW.<br>
-    ✌️ means I re-read this book — so FUCKING WOW.
+    💙 means I very recommend it.<br>
+    ❤️ means FUCKING WOW.<br>
+    💕 means I re-read this book — so probably FUCKING WOW.
     </p>
   </section>
   <section class="data" id="books-2019">
     <h2>2019</h2>
     <ul>
-      <li><em><strong>Ruined by design</em></strong> by Mike Monteiro 👌</li>
+      <li><em><strong>Ruined by design</em></strong> by Mike Monteiro 💙</li>
       <li><em><strong>El bosque oscuro</em></strong> de Liu Cixin</li>
-      <li><em><strong>El Director</em></strong> de David Jiménez 🤘</li>
+      <li><em><strong>El Director</em></strong> de David Jiménez ❤️</li>
       <li><em><strong>Lo bello y lo siniestro</em></strong> de Eugenio Trías</li>
       <li><em><strong>Carrie</em></strong> de Stephen King</li>
-      <li><em><strong>Mientras escribo</em></strong> de Stephen King 🤘</li>
-      <li><em><strong>El problema de los tres cuerpos</em></strong> de Liu Cixin 👌</li>
-      <li><em><strong>Joyland</em></strong> by Stephen King 👌</li>
+      <li><em><strong>Mientras escribo</em></strong> de Stephen King ❤️</li>
+      <li><em><strong>El problema de los tres cuerpos</em></strong> de Liu Cixin 💙</li>
+      <li><em><strong>Joyland</em></strong> by Stephen King 💙</li>
       <li><em><strong>Historias del draft</em></strong> de Mariano Galindo</li>
       <li><em><strong>Do Story</em></strong> by Bobette Buster</li>
-      <li><em><strong>Do Design</em></strong> by Alan Moore 👌</li>
-      <li><em><strong>Reina Roja</em></strong> de Juan Gómez-Jurado 👌</li>
+      <li><em><strong>Do Design</em></strong> by Alan Moore 💙</li>
+      <li><em><strong>Reina Roja</em></strong> de Juan Gómez-Jurado 💙</li>
       <li><em><strong>Of women in the Twenty-First Century</em></strong> by Shami Chakrabarti</li>
       <li><em><strong>Fahrenheit 451</em></strong> de Ray Bradbury</li>
       <li><em><strong>Una lengua muy muy larga</em></strong> de Lola Pons</li>
       <li><em><strong>The Umbrella Academy: Apocalypse Suite</em></strong> by Gerard Way and Gabriel Bá</li>
       <li><em><strong>Groucho y yo</em></strong> de Groucho Marx</li>
-      <li><em><strong>Secretos a contraluz</em></strong> de Gonzalo Vázquez 👌</li>
+      <li><em><strong>Secretos a contraluz</em></strong> de Gonzalo Vázquez 💙</li>
       <li><em><strong>Wabi-Sabi: For Artists, Designers, Poets & Philosophers</em></strong> by Leonard Koren</li>
       <li><em><strong>Los señores del tiempo</em></strong> de Eva García Sáenz</li>
-      <li><em><strong>Brief answers to the big questions</em></strong> by Stephen Hawking 👌</li>
+      <li><em><strong>Brief answers to the big questions</em></strong> by Stephen Hawking 💙</li>
       <li><em><strong>Los ritos del agua</em></strong> de Eva García Sáenz</li>
-      <li><em><strong>Maus</em></strong> de Art Spiegelman ✌️</li>
+      <li><em><strong>Maus</em></strong> de Art Spiegelman 💕</li>
       <li><em><strong>El secreto de la ciudad blanca</em></strong> de Eva García Sáenz</li>
-      <li><em><strong>Persepolis</em></strong> by Marjane Satrapi ✌️</li>
-      <li><em><strong>El sueño de mi desvelo</em></strong> de Antoni Daimiel 👌</li>
+      <li><em><strong>Persepolis</em></strong> by Marjane Satrapi 💕</li>
+      <li><em><strong>El sueño de mi desvelo</em></strong> de Antoni Daimiel 💙</li>
       <li><em><strong>Sabrina</em></strong> by Nick Drnaso</li>
       <li><em><strong>La noche en que Frankestein leyó el Quijote</em></strong> de Santiago Posteguillo</li>
       <li><em><strong>De qué hablo cuando hablo de escribir</em></strong> de Haruki Murakami</li>
