--- a/about/index.html
+++ b/about/index.html
@@ -29,6 +29,8 @@
   <section class="presentation" style="padding-bottom:0">
     <h1><strong>About</strong></h1>
     <p>I was born in 1984 in Ejea de los Caballeros (Spain). I am currently living in <del>Ejea</del>, <del>Zaragoza</del>, <del>Reading</del>, London with Cris (wifey) and Bunbury (🐶). I love reading and writing — but also 🤘, 🏀 and 🍿.</p>
+    <img src="rsc/pedroarilla.jpg">
+    <p style="font-size: .75em;">Photo by <a href="http://www.xoelburgues.com/" target="_blank">Xoel Burgués</a> (Zaragoza, 2017).</p>
   </section>
   <section class="data" id="contact">
     <h2>Contact</h2>
