--- a/texts/index.html
+++ b/texts/index.html
@@ -46,7 +46,7 @@
       <li><strong><em>Fontown</em></strong>, Type designers biographies and typeface reviews.</li>
       <li><strong><em>graffica.info</em></strong>, Articles on typography and type design.
       <li><strong><em>unostiposduros.com</em></strong>, News on typography and type design.</li>
-      <li><strong><em>perdiendolasformas.com</em></strong>, Podcasts on design.</li>
+      <li><strong><em>perdiendolasformas.com</em></strong>, Podcasts on design, /w/ Máximo Gavete.</li>
       <li><strong>«Estudiar tipografía en España»</strong>, <em>Deleátur</em> (no. 07, 2016), pp. 58–59.</li>
       <li><strong>«Atipo interview»</strong>, <em>Gràffica</em> (no. 02, 2016), pp. 86–87.</li>
       <li><strong>«Forma y contraforma»</strong>, <em>El bombín cuadrado</em> (no. 13, 2014), pp. 12–13.</li>
