Reading list update

--- a/reading/index.html
+++ b/reading/index.html
@@ -38,8 +38,8 @@
   <section class="data" id="books-2019">
     <h2>2019</h2>
     <ul>
+      <li><em><strong>Women & Power: A manifesto</em></strong> by Mary Beard</li>
       <li><em><strong>Ruined by design</em></strong> by Mike Monteiro 💙</li>
-      <li><em><strong>El bosque oscuro</em></strong> de Liu Cixin</li>
       <li><em><strong>El Director</em></strong> de David Jiménez ❤️</li>
       <li><em><strong>Lo bello y lo siniestro</em></strong> de Eugenio Trías</li>
       <li><em><strong>Carrie</em></strong> de Stephen King</li>
@@ -50,7 +50,7 @@
       <li><em><strong>Do Story</em></strong> by Bobette Buster</li>
       <li><em><strong>Do Design</em></strong> by Alan Moore 💙</li>
       <li><em><strong>Reina Roja</em></strong> de Juan Gómez-Jurado 💙</li>
-      <li><em><strong>Of women in the Twenty-First Century</em></strong> by Shami Chakrabarti</li>
+      <li><em><strong>Of women in the twenty-first century</em></strong> by Shami Chakrabarti</li>
       <li><em><strong>Fahrenheit 451</em></strong> de Ray Bradbury</li>
       <li><em><strong>Una lengua muy muy larga</em></strong> de Lola Pons</li>
       <li><em><strong>The Umbrella Academy: Apocalypse Suite</em></strong> by Gerard Way and Gabriel Bá</li>
@@ -60,7 +60,7 @@
       <li><em><strong>Los señores del tiempo</em></strong> de Eva García Sáenz</li>
       <li><em><strong>Brief answers to the big questions</em></strong> by Stephen Hawking 💙</li>
       <li><em><strong>Los ritos del agua</em></strong> de Eva García Sáenz</li>
-      <li><em><strong>Maus</em></strong> de Art Spiegelman 💕</li>
+      <li><em><strong>Maus</em></strong> by Art Spiegelman 💕</li>
       <li><em><strong>El secreto de la ciudad blanca</em></strong> de Eva García Sáenz</li>
       <li><em><strong>Persepolis</em></strong> by Marjane Satrapi 💕</li>
       <li><em><strong>El sueño de mi desvelo</em></strong> de Antoni Daimiel 💙</li>
