--- a/reading/index.html
+++ b/reading/index.html
@@ -38,6 +38,7 @@
   <section class="data" id="books-2019">
     <h2>2019</h2>
     <ul>
+      <li><em><strong>La escritura transparente</em></strong> by William Lyon 💙</li>
       <li><em><strong>Catedral</em></strong> de Raymond Carver</li>
       <li><em><strong>El bosque oscuro</em></strong> de Liu Cixin</li>
       <li><em><strong>Women & Power: A manifesto</em></strong> by Mary Beard</li>
