--- a/fonts/mestre.html
+++ b/fonts/mestre.html
@@ -38,7 +38,7 @@
       <li><strong>16 fonts:</strong> 8 uprights + 8 true italics.</li>
       <li><strong>900+ glyphs:</strong> 40+ languages supported.</li>
       <li><strong>OpenType features:</strong> small caps, case-sensitive forms, lining, tabular &amp; old-style figures, scientific superior/inferior figures, fractions, a set of arrows, etcetera.</li>
-      <li><strong>Version:</strong> 1.2 — see <a href="rsc/mestre.log" target="_blank">log</a> and <a href="rsc/mestre-license.txt" target="_blank">license</a>.
+      <li><strong>Version:</strong> 1.2 — see <a href="rsc/mestre.log" target="_blank">log</a> and <a href="rsc/mestre-licence.txt" target="_blank">licence</a>.
   </ul>
   </section>
   <section class="data" id="shopping">
