--- a/fonts/valentina.html
+++ b/fonts/valentina.html
@@ -38,7 +38,7 @@
       <li><strong>Alternates:</strong> 125 alternative lower cases characters.</li>
       <li><strong>Ligatures:</strong> 46 ligatures.</li>
       <li><strong>Price:</strong> pay-what-you-want.</li>
-      <li><strong>Version:</strong> 1.003 — see <a href="rsc/valentina.log" target="_blank">log</a> and <a href="rsc/valentina-license.txt" target="_blank">license</a>.
+      <li><strong>Version:</strong> 1.003 — see <a href="rsc/valentina.log" target="_blank">log</a> and <a href="rsc/valentina-licence.txt" target="_blank">licence</a>.
   </ul>
   </section>
   <section class="data" id="shopping">
