--- a/reading/index.html
+++ b/reading/index.html
@@ -38,6 +38,7 @@
   <section class="data" id="books-2019">
     <h2>2019</h2>
     <ul>
+      <li><em><strong>Ser mujer negra en España</em></strong> by Desirée Bela-Lobedde 💙</li>
       <li><em><strong>Hijo de Dios</em></strong> de Cormac McCarthy</li>
       <li><em><strong>La escritura transparente</em></strong> by William Lyon 💙</li>
       <li><em><strong>Catedral</em></strong> de Raymond Carver</li>
