Reading list update

--- a/reading/index.html
+++ b/reading/index.html
@@ -38,9 +38,10 @@
   <section class="data" id="books-2019">
     <h2>2019</h2>
     <ul>
-      <li><em><strong>Ser mujer negra en España</em></strong> by Desirée Bela-Lobedde 💙</li>
+      <li><em><strong>Optical letter spacing</em></strong> by David Kindersley</li>
+      <li><em><strong>Ser mujer negra en España</em></strong> de Desirée Bela-Lobedde 💙</li>
       <li><em><strong>Hijo de Dios</em></strong> de Cormac McCarthy</li>
-      <li><em><strong>La escritura transparente</em></strong> by William Lyon 💙</li>
+      <li><em><strong>La escritura transparente</em></strong> de William Lyon 💙</li>
       <li><em><strong>Catedral</em></strong> de Raymond Carver</li>
       <li><em><strong>El bosque oscuro</em></strong> de Liu Cixin</li>
       <li><em><strong>Women & Power: A manifesto</em></strong> by Mary Beard</li>
