--- a/about/index.html
+++ b/about/index.html
@@ -119,6 +119,7 @@
   <section class="data" id="awards">
     <h2>Awards</h2>
     <ul>
+      <li><strong>Bronze 2019</strong>, Cio Awards for <em>Amsteldok</em>.</li>
       <li><strong>Silver 2019</strong>, European Design Awards for <em>FS Neruda</em>.</li>
       <li><strong>One of the Winners 2019</strong>, Modern Cyrillic for <em>FS Brabo Pro</em>.</li>
       <li><strong>Wooden Pencil 2019</strong>, D&AD for <em>Storytelling Serifs Specimen</em>.</li>
@@ -131,7 +132,6 @@
   <section class="data" id="features">
     <h2>Selected features &amp; interviews</h2>
     <ul>
-      <li><em>Manual de tipografía digital</em>, Daniel Rodríguez-Valero (Campgràfic, 2016)</li>
       <li><em>AIGA, Eye on Design</em></li>
       <li><em>UnderConsideration</em></li>
       <li><em>Creative Review</em></li>
