Update reading list

--- a/reading/index.html
+++ b/reading/index.html
@@ -38,6 +38,7 @@
   <section class="data" id="books-2019">
     <h2>2019</h2>
     <ul>
+      <li><em><strong>Diseñador/Ciudadano</em></strong> de Milton Glaser 💙</li>
       <li><em><strong>Pelea como una chica</em></strong> de Sandra Sabatés ❤️</li>
       <li><em><strong>Optical letter spacing</em></strong> by David Kindersley</li>
       <li><em><strong>Ser mujer negra en España</em></strong> de Desirée Bela-Lobedde 💙</li>
