--- a/about/index.html
+++ b/about/index.html
@@ -84,6 +84,8 @@
   <section class="data" id="talks">
     <h2>Talks</h2>
     <ul>
+      <li><strong>Narrativa tipográfica.</strong> MálagaType, Málaga, Spain, 2019.</li>
+      <li><strong>Amsteldok.</strong> Letterspace, Amsterdam, The Netherlands, 2019.</li>
       <li><strong>Lost & Foundry.</strong> The Galley Club, London, United Kingdom, 2019.</li>
       <li><strong>Lost & Foundry.</strong> TypeThursdayLON, London, United Kingdom, 2018.</li>
       <li><strong>Lost & Foundry.</strong> The House of St Barnabas, London, United Kingdom, 2018.</li>
@@ -119,7 +121,10 @@
   <section class="data" id="awards">
     <h2>Awards</h2>
     <ul>
+      <li><strong>Special Mention Cyrillic-Latin 2019</strong>, Granshan for <em>FS Brabo Pro</em>.</li>
+      <li><strong>Shortlisted 2019</strong>, Communication Arts for <em>Amsteldok</em>.</li>
       <li><strong>Bronze 2019</strong>, Cio Awards for <em>Amsteldok</em>.</li>
+      <li><strong>Shortlisted 2019</strong>, Cannes Lions for <em>Amsteldok</em>.</li>
       <li><strong>Silver 2019</strong>, European Design Awards for <em>FS Neruda</em>.</li>
       <li><strong>One of the Winners 2019</strong>, Modern Cyrillic for <em>FS Brabo Pro</em>.</li>
       <li><strong>Wooden Pencil 2019</strong>, D&AD for <em>Storytelling Serifs Specimen</em>.</li>
