--- a/reading/index.html
+++ b/reading/index.html
@@ -38,6 +38,16 @@
   <section class="data" id="books-2019">
     <h2>2019</h2>
     <ul>
+      <li><em><strong>Invincible (no. 50–100)</em></strong> by Robert Kirkman, Ryan Ottley et al.</li>
+      <li><em><strong>El corazón de las tinieblas</em></strong> de Joseph Conrad</li>
+      <li><em><strong>Guía Gigantes NBA 2019-20</em></strong> de Andrés Monje</li>
+      <li><em><strong>Why I write</em></strong> by George Orwell</li>
+      <li><em><strong>The Colorado Kid</em></strong> by Stephen King 💙</li>
+      <li><em><strong>Dr. Stone (no. 1–16)</em></strong> by Riichiro Inagaki and Boichi</li>
+      <li><em><strong>El cuento de la criada</em></strong> de Margaret Atwood 💙</li>
+      <li><em><strong>The debate</em></strong> by Wim Crouwel and Jan van Toorn</li>
+      <li><em><strong>Invincible (no. 1–50)</em></strong> by Robert Kirkman, Cory Walker et al. 💙</li>
+      <li><em><strong>El cine segun Hitchcock</em></strong> de François Truffaut</li>
       <li><em><strong>Useful work v. Useless toil</em></strong> by William Morris</li>
       <li><em><strong>Diseñador/Ciudadano</em></strong> de Milton Glaser 💙</li>
       <li><em><strong>Pelea como una chica</em></strong> de Sandra Sabatés ❤️</li>
