--- a/reading/index.html
+++ b/reading/index.html
@@ -39,6 +39,7 @@
     <h2>2019</h2>
     <ul>
       <li><em><strong>Invincible (no. 50–100)</em></strong> by Robert Kirkman, Ryan Ottley et al.</li>
+      <li><em><strong>Loba Negra</em></strong> de Juan Gómez-Jurado 💙</li>
       <li><em><strong>El corazón de las tinieblas</em></strong> de Joseph Conrad</li>
       <li><em><strong>Guía Gigantes NBA 2019-20</em></strong> de Andrés Monje</li>
       <li><em><strong>Why I write</em></strong> by George Orwell</li>
