--- a/reading/index.html
+++ b/reading/index.html
@@ -38,6 +38,9 @@
   <section class="data" id="books-2019">
     <h2>2019</h2>
     <ul>
+      <li><em><strong>A history of Heavy Metal</em></strong> by Andrew O’Neill 💙</li>
+      <li><em><strong>Easy go</em></strong> by Michael Crichton</li>
+      <li><em><strong>Elevation</em></strong> by Stephen King 💙</li>
       <li><em><strong>Invincible (no. 50–100)</em></strong> by Robert Kirkman, Ryan Ottley et al.</li>
       <li><em><strong>Eric Clapton: The autobiography</em></strong> by Eric Clapton 💙</li>
       <li><em><strong>Loba Negra</em></strong> de Juan Gómez-Jurado 💙</li>
