--- a/reading/index.html
+++ b/reading/index.html
@@ -38,6 +38,7 @@
   <section class="data" id="books-2019">
     <h2>2019</h2>
     <ul>
+      <li><em><strong>Eleven rings</em></strong> by Phil Jackson and Hugh Delehanty</li>
       <li><em><strong>A history of Heavy Metal</em></strong> by Andrew O’Neill 💙</li>
       <li><em><strong>Easy go</em></strong> by Michael Crichton</li>
       <li><em><strong>Elevation</em></strong> by Stephen King 💙</li>
@@ -47,11 +48,11 @@
       <li><em><strong>El corazón de las tinieblas</em></strong> de Joseph Conrad</li>
       <li><em><strong>Guía Gigantes NBA 2019-20</em></strong> de Andrés Monje</li>
       <li><em><strong>Why I write</em></strong> by George Orwell</li>
-      <li><em><strong>The Colorado Kid</em></strong> by Stephen King 💙</li>
+      <li><em><strong>The Colorado Kid</em></strong> by Stephen King</li>
       <li><em><strong>Dr. Stone (no. 1–16)</em></strong> by Riichiro Inagaki and Boichi</li>
       <li><em><strong>El cuento de la criada</em></strong> de Margaret Atwood 💙</li>
       <li><em><strong>The debate</em></strong> by Wim Crouwel and Jan van Toorn</li>
-      <li><em><strong>Invincible (no. 1–50)</em></strong> by Robert Kirkman, Cory Walker et al. 💙</li>
+      <li><em><strong>Invincible (no. 1–50)</em></strong> by Robert Kirkman, Cory Walker et al.</li>
       <li><em><strong>El cine segun Hitchcock</em></strong> de François Truffaut</li>
       <li><em><strong>Useful work v. Useless toil</em></strong> by William Morris</li>
       <li><em><strong>Diseñador/Ciudadano</em></strong> de Milton Glaser 💙</li>
@@ -69,7 +70,7 @@
       <li><em><strong>Carrie</em></strong> de Stephen King</li>
       <li><em><strong>Mientras escribo</em></strong> de Stephen King ❤️</li>
       <li><em><strong>El problema de los tres cuerpos</em></strong> de Liu Cixin 💙</li>
-      <li><em><strong>Joyland</em></strong> by Stephen King 💙</li>
+      <li><em><strong>Joyland</em></strong> by Stephen King</li>
       <li><em><strong>Historias del draft</em></strong> de Mariano Galindo</li>
       <li><em><strong>Do Story</em></strong> by Bobette Buster</li>
       <li><em><strong>Do Design</em></strong> by Alan Moore 💙</li>
