--- a/about/index.html
+++ b/about/index.html
@@ -121,17 +121,18 @@
   <section class="data" id="awards">
     <h2>Awards</h2>
     <ul>
-      <li><strong>Special Mention Cyrillic-Latin 2019</strong>, Granshan for <em>FS Brabo Pro</em>.</li>
-      <li><strong>Shortlisted 2019</strong>, Communication Arts for <em>Amsteldok</em>.</li>
-      <li><strong>Bronze 2019</strong>, Cio Awards for <em>Amsteldok</em>.</li>
-      <li><strong>Shortlisted 2019</strong>, Cannes Lions for <em>Amsteldok</em>.</li>
-      <li><strong>Silver 2019</strong>, European Design Awards for <em>FS Neruda</em>.</li>
-      <li><strong>One of the Winners 2019</strong>, Modern Cyrillic for <em>FS Brabo Pro</em>.</li>
-      <li><strong>Wooden Pencil 2019</strong>, D&AD for <em>Storytelling Serifs Specimen</em>.</li>
-      <li><strong>Gold 2019</strong>, Creative Circle for <em>Lost & Foundry</em>.</li>
-      <li><strong>Mention @ Gerard Unger Scholarship 2017</strong>, TypeTogether for <em>Rock & Roll</em>.</li>
-      <li><strong>Most appreciated projects 2012 @ Behance</strong>, Adobe for <em>Valentina</em>.</li>
-      <li><strong>2nd @ Best project 2012</strong>, CEA for <em>Valentina</em>.</li>
+      <li><strong>Eurobest Award 2019</strong>, Bronze  for <em>Amsteldok</em>.</li>
+      <li><strong>Granshan 2019</strong>, Special Mention Cyrillic-Latin for <em>FS Brabo Pro</em>.</li>
+      <li><strong>Communication Arts 2019</strong>, Shortlisted for <em>Amsteldok</em>.</li>
+      <li><strong>Cio Awards 2019</strong>, Bronze for <em>Amsteldok</em>.</li>
+      <li><strong>Cannes Lions 2019</strong>, Shortlisted for <em>Amsteldok</em>.</li>
+      <li><strong>European Design Awards 2019</strong>, Silver for <em>FS Neruda</em>.</li>
+      <li><strong>Modern Cyrillic 2019</strong>, one of the winners for <em>FS Brabo Pro</em>.</li>
+      <li><strong>D&AD 2019</strong>, Wooden Pencil for <em>Storytelling Serifs Specimen</em>.</li>
+      <li><strong>Creative Circle 2019</strong>, Gold for <em>Lost & Foundry</em>.</li>
+      <li><strong>Gerard Unger Scholarship 2017</strong> (TypeTogether), Mention for <em>Rock & Roll</em>.</li>
+      <li><strong>Behance 2012</strong> (Adobe), Most appreciated projects for <em>Valentina</em>.</li>
+      <li><strong>CEA 2012</strong>, 2nd best project for <em>Valentina</em>.</li>
     </ul>
   </section>
   <section class="data" id="features">
